# llama3.2-lora-finetune

./: .gitignore  Modelfile  README.md  main.py  pyproject.toml  train.py
data/: instruction.json
