[project]
name = "finetuning-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "datasets>=4.1.1",
    "docling>=2.55.0",
    "litellm>=1.77.5",
    "torch>=2.8.0",
    "transformers>=4.56.2",
]
